--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<body>
-
-
-</body>
+<html>
+<head>
+<title>Queen</title>
+<style>
+    body {
+        width: 120em;
+        margin: 0 auto;
+        font-family: Tahoma, Verdana, Arial, sans-serif;
+	background-image: url('https://cdna.artstation.com/p/assets/images/images/001/896/452/large/torbjorn-toby-jorgensen-skarmavbild-2013-11-30-kl-17-22-21.jpg?1454398891');
+	/*background-size: cover;*/
+	 background-size: cover;
+        background-repeat: yes-repeat;
+   }
+</style>
+</head>
 </html>
