--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Queen</title>
+<title>Welcome to teh Becksite</title>
 <style>
     body {
         width: 120em;
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
 	background-image: url('https://drive.google.com/file/d/1RCM9e1x1GPAdMm7DYUMPXZNa0UVBJdLo/view?usp=sharing');
-	/*background-size: cover;*/
 	 background-size: cover;
         background-repeat: yes-repeat;
    }
