--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         width: 120em;
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
-	background-image: url('https://drive.google.com/file/d/1RCM9e1x1GPAdMm7DYUMPXZNa0UVBJdLo/view?usp=sharing');
+	background-image: url('https://pm1.narvii.com/6751/282f141496275cd291e8e6009be60c60675945abv2_hq.jpg');
 	 background-size: cover;
         background-repeat: yes-repeat;
    }
