--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
-<!DOCTYPE html>
 <html>
-<head>
-<title>Welcome to teh Becksite</title>
+ <head>
+ </head>
 <style>
-    body {
-        width: 120em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-	background-image: url('https://pm1.narvii.com/6751/282f141496275cd291e8e6009be60c60675945abv2_hq.jpg');
-	 background-size: cover;
-        background-repeat: yes-repeat;
-   }
+     body {
+  background: #303030;
+  padding: 0px 0;
+}
+.my-container {
+    position: relative;
+    background: #696969;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0.6;
+    background-image: url('https://pm1.narvii.com/6751/282f141496275cd291e8e6009be60c60675945abv2_hq.jpg');
+    background-repeat: yes-repeat;
+    background-position: 100% 0;
+    background-size: cover;
+}
+.text h1 {
+    padding: 20px;
+    text-align: left;
+    z-index: 2;
+    position: relative;
+    color: #ff0fff;
+    font-size: 75px;
+} 
 </style>
-</head>
-</html>
+ <body>
+      <div class="text">
+      <h1>Welcome to teh Becksite</h1>
+      </div>
+      <div class="my-container">
+      </div>
+ </body>
