--- a/myhtmlFile.html
+++ b/myhtmlFile.html
@@ -52,3 +52,6 @@
       <div class="my-container">
       </div>
  </body>
+ <meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
